; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_fb_helper.c_drm_fb_helper_cfb_fillrect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_fb_helper.c_drm_fb_helper_cfb_fillrect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { i32 }
%struct.fb_fillrect = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_fb_helper_cfb_fillrect(%struct.fb_info* %0, %struct.fb_fillrect* %1) #0 {
  %3 = alloca %struct.fb_info*, align 8
  %4 = alloca %struct.fb_fillrect*, align 8
  store %struct.fb_info* %0, %struct.fb_info** %3, align 8
  store %struct.fb_fillrect* %1, %struct.fb_fillrect** %4, align 8
  %5 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %6 = load %struct.fb_fillrect*, %struct.fb_fillrect** %4, align 8
  %7 = call i32 @cfb_fillrect(%struct.fb_info* %5, %struct.fb_fillrect* %6)
  %8 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %9 = load %struct.fb_fillrect*, %struct.fb_fillrect** %4, align 8
  %10 = getelementptr inbounds %struct.fb_fillrect, %struct.fb_fillrect* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.fb_fillrect*, %struct.fb_fillrect** %4, align 8
  %13 = getelementptr inbounds %struct.fb_fillrect, %struct.fb_fillrect* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.fb_fillrect*, %struct.fb_fillrect** %4, align 8
  %16 = getelementptr inbounds %struct.fb_fillrect, %struct.fb_fillrect* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.fb_fillrect*, %struct.fb_fillrect** %4, align 8
  %19 = getelementptr inbounds %struct.fb_fillrect, %struct.fb_fillrect* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @drm_fb_helper_dirty(%struct.fb_info* %8, i32 %11, i32 %14, i32 %17, i32 %20)
  ret void
}

declare dso_local i32 @cfb_fillrect(%struct.fb_info*, %struct.fb_fillrect*) #1

declare dso_local i32 @drm_fb_helper_dirty(%struct.fb_info*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
